# Project_Ai_and_cybersecurity

./: .dockerignore  .env.dev  .env.dev-local  .gitattributes  .gitignore  .gitlab-ci.yml  A4S CCLA (Entities).txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  NOTICE.md  README.md  READMEKL.md  pyproject.toml
.github/workflows/: docker-image.yml  ported-ci.yml
a4s_eval/: api_client.py  celery_app.py  celery_gpt.py  celery_tasks.py  celery_worker.py  main.py
a4s_eval/data_model/: dataset.py  evaluation.py  metric.py  model.py  project.py
a4s_eval/datasets/: drift.py
a4s_eval/evaluation/: drift_evaluation.py  evaluation.py
a4s_eval/evaluators/: __init__.py  data_evaluator.py  model_evaluator.py
a4s_eval/metric_registries/: model_metric_registry.py
a4s_eval/metric_registry/: __init__.py
a4s_eval/model/: data_model.py
a4s_eval/models/: metrics.py
a4s_eval/routers/: datashape.py  evaluation.py
a4s_eval/service/: api_client.py
a4s_eval/tasks/: data_metric_tasks.py  dataset_evaluation_task.py  datashape_tasks.py  evaluate_dataset.py  evaluate_model.py  evaluation_tasks.py  model_evaluation_tasks.py  prediction_metric_tasks.py
config/: logging.yaml
data/: titanic_period1.csv  titanic_period2.csv
reports/: profile_data_drift.json  titanic_drift_report.html
results/: titanic_kl_results.csv
scripts/: generate_titanic_datasets.py  run_evidently_report.py  run_kl.py
tasks/: entrypoint.sh  start.sh  start_api.sh  start_dev.sh  start_docker_dev.sh  start_worker.sh
tests/: conftest.py  test_basic_integration.py  test_sample.py
(+36 files in other folders)
